samples/_failures_safe/1761477027_40ab93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57b6413b.c: In function ‘get_token’:
./samples/SAFE/__tmp_57b6413b.c:155:9: error: expected expression at end of input
  155 |         token->value[1] =
      |         ^~~~~
./samples/SAFE/__tmp_57b6413b.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57b6413b.c:155:9: error: expected declaration or statement at end of input
